--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 </ul>
 <meta charset="utf-8">
 <title>練習問題2.6</title>
+ <a href=“a.html”>相対パスでリンクします</a><br>
+ <a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>
+ <a href=“mailto:zm23279@josai.ac.jp”>自分宛メール（自分のメールアドレスを入力）</a><br>
+ <a href=“https://www.josai.ac.jp/management/”>
+<img src=“./image/keiei_small.jpg” alt=“城西大学経営学部"></a>
  </body>
  
  
