--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 <meta charset="utf-8">
 <title>練習問題2.6</title>
 <title>練習問題3.1</title> 
- <add>keiei_small.jpg</add>
+ 
  
  <a href=“a.html”>相対パスでリンクします</a><br>
  <a href=https://www.josai.ac.jp/management/>絶対パスで城西大学経営学部へリンクします。</a><br>
  <a href=“mailto:zm23279@josai.ac.jp”>自分宛メール（自分のメールアドレスを入力）</a><br>
  <a href=“https://www.josai.ac.jp/management/”>
 <img src=“./image/keiei_small.jpg” alt=“城西大学経営学部"></a>
-
+ 
+<a hret="keiei_small.jpg">
 </body>
  
  
