--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
 </ul>
 <meta charset="utf-8">
 <title>練習問題2.6</title>
-<title>練習問題3.1</title> 
+<h1>練習問題3.1</h1> 
  
  
  <a href=“a.html”>相対パスでリンクします</a><br>
