--- a/index.html
+++ b/index.html
@@ -236,6 +236,10 @@
 <a href="a.html" target="_top">フレームをすべて解
 除してリンクします</a><br>
 <a href="a.html" target="abc">
+ <a href=“#abc">abcと名前を付けた場所へリンクしま
+す</a><br>
+<a href=“a.html#def">別ファイルの名前を付けた場
+所へリンクします</a>
 </body>
  
 </html>
