--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
 <a href="a.html" target="_top">フレームをすべて解
 除してリンクします</a><br>
 <a href="a.html" target="abc">
+ <li>ほにゃらら</li>
+</ol>
+ <a id="abc">ここがabcの場所</a>
+ <dl>
+   <dt>作者</dt>
  <a href=“#abc">abcと名前を付けた場所へリンクしま
 す</a><br>
 <a href=“a.html#def">別ファイルの名前を付けた場
