--- a/a.html
+++ b/a.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <p>アンカータグの練習です。</p>
+  <li>ほにゃらら</li>
+</ol>
+ <a id="abc">ここがabcの場所</a>
+ <dl>
+   <dt>作者</dt>
 <a id=“def”>ここがdefの場所</a>
+  
 </body>
 </html>
