--- a/index.html
+++ b/index.html
@@ -236,7 +236,12 @@
 <a href="a.html" target="_top">フレームをすべて解
 除してリンクします</a><br>
 <a href="a.html" target="abc">
-<h1>練習問題３．３</h1>
+<h1>練習問題３．３</h1>]
+   <li>ほにゃらら</li>
+</ol>
+ <a id="abc">ここがabcの場所</a>
+ <dl>
+   <dt>作者</dt>
 
  <a href=“#abc">abcと名前を付けた場所へリンクしま
 す</a><br>
