--- a/index.html
+++ b/index.html
@@ -237,16 +237,9 @@
 除してリンクします</a><br>
 <a href="a.html" target="abc">
 <h1>練習問題３．３</h1>]
-   <li>ほにゃらら</li>
-</ol>
- <a id="abc">ここがabcの場所</a>
- <dl>
-   <dt>作者</dt>
-
- <a href=“#abc">abcと名前を付けた場所へリンクしま
-す</a><br>
-<a href=“a.html#def">別ファイルの名前を付けた場
-所へリンクします</a>
+  <a href="#abc">abcと名前を付けた場所へリンクします</a>
+ <br>
+ <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
 </body>
  
 </html>
