--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
 
  <h1>練習問題３．３</h1>
-<a href="#abc">abcと名前を付けた場所へリンクします</a><br>
+<a href="abc#">abcと名前を付けた場所へリンクします</a><br>
 <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
 
 
